# Zeal-Disk-Tool

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: GenerateVersion.cmake  toolchain-linux32.cmake  toolchain-win32.cmake  toolchain-win64.cmake
include/: disk.h  ui.h  zealfs_v2.h
include/ui/: menubar.h  partition_viewer.h  popup.h  statusbar.h  tinyfiledialogs.h
src/: disk.c  disk_linux.c  disk_mac.c  disk_win.c  main.c
src/ui/: combo_disk.c  menubar.c  message_box.c  partition_viewer.c  statusbar.c  tinyfiledialogs.c
src/zealfs/: zealfs_v2.c
